@@ -16,6 +16,7 @@
 [add] Settings -> Maintenance -> Delete temporary files
 [fix] context menu after playback
 [fix] alternative player, do not append headers
+[fix/upd] post play events happen post play
 [fix/upd] set title from metadata on play
 [upd] Dutch strings [MB1968]
 [upd] French strings [bubuleur]
