@@ -69,11 +69,11 @@ def play_video(provider, context, re_match):
             try:
                 if str(context.get_param('incognito', False)).lower() != 'true':
                     command = 'RunPlugin(%s)' % context.create_uri(['events', 'post_play'], {'video_id': video_id})
-                    context.execute(command)
+                    context.get_ui().set_home_window_property('post_play', command)
             except:
-                context.get_ui().show_notification('Failed to execute post play events.', time_milliseconds=5000)
+                context.log_debug('Failed to set post play events.')
 
-        context.get_ui().set_home_window_property('playing', 'true')
+        context.get_ui().set_home_window_property('playing', video_id)
 
         return video_item
     except YouTubeException as ex:
